slightly fixed card overflow problem
revisit later

--- a/src/components/ProjectCards/index.scss
+++ b/src/components/ProjectCards/index.scss
@@ -1,7 +1,10 @@
 .projectcards {
-  width: 25%;
-  min-width: 500px;
-  max-width: 600px;
+  // width: 50%;
+  min-height: 35vh;
+  // max-height: 500px;
+  min-width: 50vw;
+  // max-width: 800px;
+  overflow: hidden;
   margin: 20px;
   font-family: "Quicksand", sans-serif;
   position: relative;
@@ -10,11 +13,11 @@
   box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2);
 }
 
-.projectcards::before {
-  content: "";
-  display: block;
-  padding-bottom: calc((5 / 4) * 100%);
-}
+// .projectcards::before {
+//   content: "";
+//   display: block;
+//   padding-bottom: calc((5 / 6) * 100%);
+// }
 
 .projectcards_content {
   position: absolute;
